--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="style.css">
     <script src="../models/world.class.js"></script>
     <script src="../models/movable_object.class.js"></script>
+    <script src="../models/background_object.class.js"></script>
     <script src="../models/character.class.js"></script>
     <script src="../models/enemy_1.class.js"></script>
+    <script src="../models/background_water.class.js"></script>
     <script src="../js/game.js"></script>
 </head>
 <body onload="init()">
-    
-    <h1>El Pollo Loco</h1>
 
-    <canvas id="canvas" width="720px" height="480px">
+    <canvas id="canvas" width="1920px" height="1080px">
 
     </canvas>
 
