--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <script src="../models/background_object.class.js"></script>
     <script src="../models/character.class.js"></script>
     <script src="../models/enemy_1.class.js"></script>
-    <script src="../models/background_water.class.js"></script>
+    <script src="../models/background_fish.class.js"></script>
+    <script src="../models/keyboard.class.js"></script>
     <script src="../js/game.js"></script>
 </head>
 <body onload="init()">
