--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pollo Loco</title>
+    <title>Sharkie</title>
     <link rel="stylesheet" href="style.css">
     <script src="../models/world.class.js"></script>
     <script src="../models/movable_object.class.js"></script>
@@ -13,8 +14,11 @@
     <script src="../models/enemy_1.class.js"></script>
     <script src="../models/background_fish.class.js"></script>
     <script src="../models/keyboard.class.js"></script>
+    <script src="../models/level.class.js"></script>
+    <script src="../levels/level_1.js"></script>
     <script src="../js/game.js"></script>
 </head>
+
 <body onload="init()">
 
     <canvas id="canvas" width="1920px" height="1080px">
@@ -23,4 +27,5 @@
 
 
 </body>
+
 </html>
