--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="../models/background_object.class.js"></script>
     <script src="../models/character.class.js"></script>
     <script src="../models/enemy_1.class.js"></script>
+    <script src="../models/endboss.class.js"></script>
     <script src="../models/background_fish.class.js"></script>
     <script src="../models/keyboard.class.js"></script>
     <script src="../models/level.class.js"></script>
