--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Sharkie</title>
     <link rel="stylesheet" href="style.css">
     <script src="../models/world.class.js"></script>
+    <script src="../models/drawable_object.class.js"></script>
+    <script src="../models/status_bar.class.js"></script>
     <script src="../models/movable_object.class.js"></script>
     <script src="../models/background_object.class.js"></script>
     <script src="../models/character.class.js"></script>
