statusbar and so on

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="../models/keyboard.class.js"></script>
     <script src="../models/level.class.js"></script>
     <script src="../levels/level_1.js"></script>
+    <script src="../load/status.js"></script>
     <script src="../models/world.class.js"></script>
     <script src="../js/game.js"></script>
 </head>
