--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="../models/enemy_1.class.js"></script>
     <script src="../models/endboss.class.js"></script>
     <script src="../models/background_fish.class.js"></script>
+    <script src="../models/throwable_object.class.js"></script>
     <script src="../models/keyboard.class.js"></script>
     <script src="../models/level.class.js"></script>
     <script src="../levels/level_1.js"></script>
