--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <script src="../models/level.class.js"></script>
     <script src="../levels/level_1.js"></script>
     <script src="../load/status.js"></script>
+    <script src="../load/character.js"></script>
+    <script src="../load/sounds.js"></script>
     <script src="../models/startscreen.class.js"></script>
     <script src="../models/world.class.js"></script>
 
@@ -37,7 +39,6 @@
                 </div>
             </div>
         </div>
-        <!-- <canvas id="canvas" width="1920px" height="1080px"></canvas> -->
     </div>
 
 </body>
