--- a/index.html
+++ b/index.html
@@ -31,10 +31,15 @@
 <body>
     <div class="content" id="content">
         <div class="startscreen">
-            <img class="startscreen-bg" src="../img/startscreen/startscreen_bg.png">
             <div class="menu">
+                <div class="settings-button" onclick="">
+                    <h3>Settings</h3>
+                </div>
                 <div class="start-button" onclick="startGame()">
                     <h2>Start</h2>
+                </div>
+                <div class="navigation-button" onclick="">
+                    <h3>Navigation</h3>
                 </div>
             </div>
         </div>
