--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 
 </head>
 
-<body>
+    <body>
     <div class="content" id="content">
-        <div class="startscreen">
+        <div class="startscreen" id="startscreen">
             <div class="menu">
-                <div class="settings-button" onclick="">
+                <div class="settings-button" onclick="showSettings(); playSound(CLICK_SOUND)">
                     <h3>Settings</h3>
                 </div>
-                <div class="start-button" onclick="startGame()">
+                <div class="start-button" onclick="startGame(); playSound(START_SOUND)">
                     <h2>Start</h2>
                 </div>
-                <div class="navigation-button" onclick="">
+                <div class="navigation-button" onclick="showNavigation(); playSound(CLICK_SOUND)">
                     <h3>Navigation</h3>
                 </div>
             </div>
