--- a/index.html
+++ b/index.html
@@ -32,20 +32,21 @@
 <body>
     <div class="content" id="content">
         <div class="startscreen" id="startscreen">
-            <div class="menu">
-                <div class="settings-button" onclick="playSound(CLICK_SOUND); showSettings()">
-                    <h3>Settings</h3>
-                </div>
-                <div class="start-button" onclick="playSound(START_SOUND); startGame()">
-                    <h2>Start</h2>
-                </div>
-                <div class="navigation-button" onclick="playSound(CLICK_SOUND); showNavigation()">
-                    <h3>Navigation</h3>
-                </div>
+            <h1>Skarkyboy</h1>
+            <div class="start-button" onclick="playSound(START_SOUND); startGame()">
+                <h2>Start</h2>
+            </div>
+            <div class="settings-button" onclick="playSound(CLICK_SOUND); showSettings()">
+                <h3>Settings</h3>
+            </div>
+            <div class="navigation-button" onclick="playSound(CLICK_SOUND); showNavigation()">
+                <h3>Navigation</h3>
             </div>
         </div>
     </div>
-
+    
+    <!-- <div class="menu"> -->
+    <!-- </div> -->
 </body>
 
 </html>
