--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
     <script src="../models/world.class.js"></script>
 </head>
 
-<body>
-    <audio src="../sounds/menu_sound.mp3" id="menuSound" loop="loop"></audio>
+<body onload="initialize()">
+    <!-- <audio src="../sounds/menu_sound.mp3" id="menuSound" loop="loop"></audio> -->
     <div class="content" id="content">
         <div class="startscreen" id="startscreen">
         </div>
     </div>
 </body>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     window.onload = function () {
-        initialize();
         document.getElementById('menuSound').play();
+        initialize();
     }
-</script>
+</script> -->
 
 </html>
