--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="../models/throwable_object.class.js"></script>
     <script src="../models/level.class.js"></script>
     <script src="../levels/level_1.js"></script>
+    <script src="../load/background.js"></script>
     <script src="../load/status.js"></script>
     <script src="../load/character.js"></script>
     <script src="../load/sounds.js"></script>
