--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <script src="../models/enemy_1.class.js"></script>
     <script src="../models/endboss.class.js"></script>
     <script src="../models/background_fish.class.js"></script>
+    <script src="../models/coin.class.js"></script>
+    <script src="../models/poison_bottle.class.js"></script>
     <script src="../models/throwable_object.class.js"></script>
     <script src="../models/level.class.js"></script>
     <script src="../levels/level_1.js"></script>
