--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="../load/background.js"></script>
     <script src="../load/status.js"></script>
     <script src="../load/character.js"></script>
+    <script src="../load/enemies.js"></script>
     <script src="../load/sounds.js"></script>
     <script src="../models/world.class.js"></script>
 </head>
