--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <div class="startscreen" id="startscreen">
         </div>
     </div>
+    <div id="pauseScreen" class="pause-screen d-none"></div>
 </body>
 
 <!-- <script type="text/javascript">
