--- a/index.html
+++ b/index.html
@@ -33,19 +33,47 @@
 </head>
 
 <body onload="initialize()">
-    <!-- <audio src="../sounds/menu_sound.mp3" id="menuSound" loop="loop"></audio> -->
     <div class="content" id="content">
         <div class="startscreen" id="startscreen">
         </div>
     </div>
-    <div id="pauseScreen" class="pause-screen d-none"></div>
+    <div id="pauseScreen" class="pause-screen d-none">
+        <div class="sound-container center">
+            <h4 class="w-750">Fullscreen</h4>
+            <div class="fullscreen-circle-btn yellow-highlight" id="fullscreenIcon1"
+                onclick="highlightFullscreenSelection(1); showSelectedOption('Off')">
+                <img src="../img/icons/fullscreen_off.png" id="fullscreenOff" class="fullscreen-icon"
+                    onclick="playSound(CLICK_SOUND)">
+            </div>
+            <div class="fullscreen-circle-btn" id="fullscreenIcon2"
+                onclick="highlightFullscreenSelection(2); showSelectedOption('On')">
+                <img src="../img/icons/fullscreen_on.png" id="fullscreenOn" class="fullscreen-icon"
+                    onclick="playSound(CLICK_SOUND)">
+            </div>
+        </div>
+        <div class="sound-container center">
+            <h4 class="w-750">Sound</h4>
+            <div class="sound-circle-btn yellow-highlight" id="soundIcon1"
+                onclick="highlightSoundSelection(1); showSelectedOption('Enabled')">
+                <img src="../img/icons/sound_on.png" id="unmuteButton" class="setting-icon"
+                    onclick="playSound(CLICK_SOUND); unmuteSound()">
+            </div>
+            <div class="sound-circle-btn" id="soundIcon2"
+                onclick="highlightSoundSelection(2); showSelectedOption('Muted')">
+                <img src="../img/icons/sound_mute.png" id="muteButton" class="setting-icon"
+                    onclick="playSound(CLICK_SOUND); muteSound()">
+            </div>
+        </div>
+        <div class="sound-container back-btn-container-adjustment">
+            <h4 class="fs-70 w-750">Return to Startscreen</h4>
+            <div class="w-344 d-flex center">
+                <div class="back-btn pos-unset back-btn-adjustment">
+                    <img src="../img/icons/go-back.png" class="back-icon"
+                        onclick="playSound(CLICK_SOUND); returnToStartpage()">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
-
-<!-- <script type="text/javascript">
-    window.onload = function () {
-        document.getElementById('menuSound').play();
-        initialize();
-    }
-</script> -->
 
 </html>
