cleaned up folder and files

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="../js/game.js"></script>
     <script src="../models/drawable_object.class.js"></script>
     <script src="../models/status_bar.class.js"></script>
+    <script src="../models/coin_counter.class.js"></script>
     <script src="../models/movable_object.class.js"></script>
     <script src="../models/background_object.class.js"></script>
     <script src="../models/character.class.js"></script>
@@ -69,7 +70,7 @@
             <div class="w-344 d-flex center">
                 <div class="back-btn pos-unset back-btn-adjustment">
                     <img src="../img/icons/go-back.png" class="back-icon"
-                        onclick="playSound(CLICK_SOUND); returnToStartpage()">
+                        onclick="playSoundAndReturn()">
                 </div>
             </div>
         </div>
