--- a/index.html
+++ b/index.html
@@ -69,8 +69,26 @@
             <h4 class="fs-70 w-750">Return to Startscreen</h4>
             <div class="w-344 d-flex center">
                 <div class="back-btn pos-unset back-btn-adjustment">
-                    <img src="../img/icons/go_back.png" class="back-icon"
-                        onclick="playSoundAndReturn()">
+                    <img src="../img/icons/go_back.png" class="back-icon" onclick="playSoundAndReturn()">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="loseScreen" class="lose-screen d-none">
+        <h6>You lose</h6>
+        <div class="sound-container lose-screen-container-adjustment">
+            <h4 class="fs-70 w-750">Go again</h4>
+            <div class="w-344 d-flex center">
+                <div class="back-btn pos-unset back-btn-adjustment">
+                    <img src="../img/icons/restart.png" class="restart-icon" onclick="playSoundAndReturn()">
+                </div>
+            </div>
+        </div>
+        <div class="sound-container lose-screen-container-adjustment">
+            <h4 class="fs-70 w-750">Return to Startscreen</h4>
+            <div class="w-344 d-flex center">
+                <div class="back-btn pos-unset back-btn-adjustment">
+                    <img src="../img/icons/go_back.png" class="back-icon" onclick="playSoundAndReturn()">
                 </div>
             </div>
         </div>
