endboss attack in progress

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </div>
     </div>
-    <div id="loseScreen" class="lose-screen ">
+    <div id="loseScreen" class="lose-screen d-none">
         <h6 class="mt-140">¡ You lose !</h6>
         <div class="resume-container">
             <div class="resume-box">
