--- a/index.html
+++ b/index.html
@@ -77,59 +77,13 @@
             <h4 class="fs-70 w-750">Return to Startscreen</h4>
             <div class="w-344 d-flex center">
                 <div class="back-btn pos-unset back-btn-adjustment">
-                    <img src="../img/icons/home.png" class="home-icon home-icon-adjustment" onclick="playSoundAndReturn()">
+                    <img src="../img/icons/home.png" class="home-icon home-icon-adjustment"
+                        onclick="playSoundAndReturn()">
                 </div>
             </div>
         </div>
     </div>
-    <div id="loseScreen" class="lose-screen d-none">
-        <h6 class="mt-140">¡ You lose !</h6>
-        <div class="resume-container">
-            <div class="resume-box">
-                <img src="../img/status/coins/coin.png" class="coin-img">
-                <h5 class="d-flex-centered">5</h5>
-            </div>
-            <div class="resume-box">
-                <img src="../img/enemies/puffer_fish_red/dead/(1).png" class="pufferfish-img">
-                <h5 class="d-flex-centered">5</h5>
-            </div>
-        </div>
-        <div class="sound-container lose-screen-container-adjustment">
-            <h4 class="fs-70 w-750">Go again</h4>
-            <div class="w-344 d-flex center">
-                <div class="back-btn pos-unset back-btn-adjustment">
-                    <img src="../img/icons/restart.png" class="restart-icon" onclick="playSoundAndReturn()">
-                </div>
-            </div>
-        </div>
-        <div class="sound-container lose-screen-container-adjustment">
-            <h4 class="fs-70 w-750">Return to Startscreen</h4>
-            <div class="w-344 d-flex center">
-                <div class="back-btn pos-unset back-btn-adjustment">
-                    <img src="../img/icons/home.png" class="home-icon home-icon-adjustment" onclick="playSoundAndReturn()">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="winScreen" class="win-screen d-none">
-        <h6 class="mt-120">You win</h6>
-        <div class="sound-container win-screen-container-adjustment mt-120">
-            <h4 class="fs-70 w-750">Go again</h4>
-            <div class="w-344 d-flex center">
-                <div class="back-btn pos-unset back-btn-adjustment">
-                    <img src="../img/icons/restart.png" class="restart-icon" onclick="playSoundAndReturn()">
-                </div>
-            </div>
-        </div>
-        <div class="sound-container win-screen-container-adjustment">
-            <h4 class="fs-70 w-750">Return to Startscreen</h4>
-            <div class="w-344 d-flex center">
-                <div class="back-btn pos-unset back-btn-adjustment">
-                    <img src="../img/icons/go_back.png" class="back-icon" onclick="playSoundAndReturn()">
-                </div>
-            </div>
-        </div>
-    </div>
+    <div id="endScreen" class="lose-screen d-none"></div>
 </body>
 
 </html>
