--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
         </div>
     </div>
-    <div id="endScreen" class="lose-screen d-none"></div>
+    <div id="endScreen" class="end-screen d-none"></div>
 </body>
 
 </html>
