new rotate screen

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 </head>
 
 <body onload="initialize()">
+    <div class="screen-rotate">
+        <span>please rotate<br> your phone</span>
+    </div>
     <div class="content" id="content">
         <div class="startscreen" id="startscreen">
         </div>
