--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" href="../img/icons/sharkyboy_favicon.png">
     <link rel="stylesheet" href="style.css">
     <script src="../js/templates.js"></script>
+    <script src="../js/difficulty.js"></script>
     <script src="../script.js"></script>
     <script src="../models/keyboard.class.js"></script>
     <script src="../js/game.js"></script>
