--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sharkyboy</title>
     <link rel="icon" type="image/png" href="../img/icons/sharkyboy_favicon.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/responsive.css">
     <script src="../js/templates.js"></script>
     <script src="../js/difficulty.js"></script>
     <script src="../script.js"></script>
@@ -35,9 +36,8 @@
 </head>
 
 <body onload="initialize()">
-    <div class="screen-rotate">
-        <span>please rotate<br> your device</span>
-    </div>
+    <div class="screen-rotate"></div>
+    <span class="screen-rotate-span">please rotate<br> your device</span>
     <div class="content" id="content">
         <div class="startscreen" id="startscreen">
         </div>
