--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../css/responsive.css">
     <script src="../js/templates.js"></script>
+    <script src="../js/settings.js"></script>
     <script src="../js/difficulty.js"></script>
     <script src="../script.js"></script>
     <script src="../models/keyboard.class.js"></script>
