added endboss health bar

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="../models/character.class.js"></script>
     <script src="../models/enemy_1.class.js"></script>
     <script src="../models/endboss.class.js"></script>
+    <script src="../models/endboss_health_bar.class.js"></script>
     <script src="../models/background_fish.class.js"></script>
     <script src="../models/coin.class.js"></script>
     <script src="../models/poison_bottle.class.js"></script>
